Add unit test to services class

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,3 +31,12 @@ Style/Documentation:
 
 RSpec/MultipleMemoizedHelpers:
   Max: 10
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
+RSpec/ExampleLength:
+  Enabled: false
+
+RSpec/MessageSpies:
+  Enabled: false
